# appliedNN

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  configure.sh  main.cpp  run.sh  test.sh
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  annSetupMSVCRuntime.cmake  annSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  annMyFirstApp.cpp
Code/Lib/: CMakeLists.txt  annBasicTypes.cpp  annBasicTypes.h  annException.cpp  annException.h  annExceptionMacro.h  annMyFunctions.cpp  annMyFunctions.h  annWin32ExportHeader.h
Testing/: CMakeLists.txt  annBasicTest.cpp  annCatchMain.cpp  annCatchMain.h  annCommandLineArgsTest.cpp
